# Snake

./: CMakeLists.txt  CMakeSettings.json  README.md
snake/: CMakeLists.txt  main.cpp  snake.cpp
snake/animator/: animator.cpp  animator.h
snake/collision/: collision.cpp  collision.h
snake/constant/: constants.h
snake/items/: AbstractItem.h  fooditem.cpp  fooditem.h  snakeitem.cpp  snakeitem.h
snake/painter/: painter.cpp  painter.h
snake/timer/: timer.cpp  timer.h
